INTYGFV-15731: Refactored GetActiveSickLeavesServiceImpl into separate services.